Actions
Bug #11386
closedluxadm: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
fabric_conf.c: In function 'read_repos_file': fabric_conf.c:104:48: error: comparison between pointer and integer [-Werror] if (repos_filename == NULL || *repos_filename == NULL) { ^~ fabric_conf.c:146:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *tmp_ptr = NULL; ^ fabric_conf.c: In function 'parse_line': fabric_conf.c:198:11: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *p_delim = NULL; /* NULL terminate path */ ^ fabric_conf.c:218:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *p_delim = NULL; /* terminate wwn at delim */ ^ fabric_conf.c:223:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *p_last_char = NULL; ^ lux_util.c: In function 'print_inq_data': lux_util.c:917:18: error: comparison between pointer and integer [-Werror] if (inq.inq_rmb != NULL) { ^~ lux_util.c:926:22: error: comparison between pointer and integer [-Werror] if (inq.inq_mchngr != NULL) { ^~ lux_util.c:953:23: error: comparison between pointer and integer [-Werror] if (inq.inq_normaca != NULL) { ^~ lux_util.c:971:21: error: comparison between pointer and integer [-Werror] if (inq.inq_port != NULL) { ^~ lux_util.c:1032:32: error: comparison between pointer and integer [-Werror] if (inq.ui.inq_3.inq_trandis != NULL) { ^~ lux_util.c: In function 'get_scsi_vhci_pathinfo': lux_util.c:1371:54: error: comparison between pointer and integer [-Werror] if (strncmp(dev_path, SCSI_VHCI, strlen(SCSI_VHCI)) != NULL) { ^~ lux_util.c:1377:26: error: comparison between pointer and integer [-Werror] strlen(SCSI_VHCI)) != NULL) { ^~ lux_util.c:1395:14: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *delimiter = NULL; ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 0babfc55a001a1a55719ffeced558ec05d5ec38c
commit 0babfc55a001a1a55719ffeced558ec05d5ec38c Author: Toomas Soome <tsoome@me.com> Date: 2019-07-18T06:11:59.000Z 11386 luxadm: NULL pointer errors Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Alexander Pyhalov <apyhalov@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions